Agregando el edittext de material design

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,13 @@
     <androidx.constraintlayout.widget.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/guideLineButton"
+        android:id="@+id/guideLineButtonVertical"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.5"
         />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideLineButtonHorizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -23,20 +24,17 @@
         />
 
 
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints"
-        app:layout_constraint
-
-
-        >
+        android:hint="Ingrese su nombre aqui"
+        tools:ignore="MissingConstraints">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:text="Esto es un ejemplo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             />
 
     </com.google.android.material.textfield.TextInputLayout>
