--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,7 +84,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="0.3"
         android:textSize="18sp"
+        app:backgroundTint="#A9C69F"
         android:background="@drawable/shape_button"
+        android:textColor="@color/black"
         />
 
 
