Agregando imagen al layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,8 @@
         android:id="@+id/textInputLayoutName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginEnd="14dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginEnd="18dp"
         android:hint="Ingrese su nombre aqui"
         app:boxBackgroundMode="filled"
         app:boxStrokeWidth="0dp"
@@ -49,8 +49,8 @@
         android:id="@+id/textInputLayoutSurName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginEnd="14dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginEnd="18dp"
         android:hint="Ingrese su apellido aqui"
         app:boxBackgroundMode="filled"
         app:boxStrokeWidth="0dp"
@@ -76,13 +76,13 @@
         android:text="INGRESAR"
         style="@style/Widget.MaterialComponents.Button"
         tools:ignore="MissingConstraints"
-        android:layout_marginEnd="14dp"
-        android:layout_marginStart="14dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginStart="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSurName"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.3"
+        app:layout_constraintVertical_bias="0.5"
         android:textSize="18sp"
         app:backgroundTint="#A9C69F"
         android:background="@drawable/shape_button"
@@ -90,4 +90,20 @@
         />
 
 
+    <ImageView
+        android:id="@+id/imgLibreta"
+        android:layout_width="wrap_content"
+        android:layout_height="250dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/libretasesion"
+        android:adjustViewBounds="true"
+        tools:ignore="MissingConstraints"
+        app:layout_constraintVertical_bias="0.10"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
